2009-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Try to restack less.  Fixes doubly set CURRENT_APP_WINDOW
	(ie. is-topmost) after task switching.

	* src/mb/hd-comp-mgr.c:
	  The unused hd_comp_mgr_sync_stacking() got new meaning
	  to schedule a restack when idle.
	* src/mb/hd-comp-mgr.h:
	  Changed the signature of hd_comp_mgr_restack() to be usable
	  as an idle function.
	* src/home/hd-render-manager.h:
	  Corrected STATE_NEED_TASK_NAV() to not include the launcher.
	* src/home/hd-render-manager.c (hd_render_manager_update_blur_state):
	  Use it.
	* src/home/hd-switcher.c (hd_switcher_zoom_in_complete):
	  Likewise.  We used to restack 3 times.

2009-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c (hd_render_manager_set_state):
	  Removed hd_render_manager_return_windows() as it shouldn't be
	  necessary anymore.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify):
	  Removed a clutter_actor_hide(), set_visibilities() should be
	  smart enough now.

2009-04-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Visibility and subview transition fixes.

	* src/mb/hd-comp-mgr.h:
	  Added HdCompMgrClient::effect for hd-transition.
	* src/util/hd-transition.h:
	  Added hd_transition_actor_will_go_away().
	* src/util/hd-transition.c (hd_transition_subview, hd_transition_completed):
	  If multiple subview transitions would overlap replace the actors.
	  This is necessary when the client maps a lot of stackable windows
	  at once.  In particular, it help keeping visibilities right when
	  we start managing such clients at startup.
	* src/home/hd-render-manager.c:
	  Added visibility-related debug prints.
	  Added workaround not to hide HdHome when it should be shown.
	    This is necessary when a large window stack is pulled down at once.
	  Use hd_transition_actor_will_go_away().

2009-04-03  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Wait until the real app appears before hiding the switcher when waking up