@@ -1,4 +1,4 @@
-noinst_PROGRAMS = test-hung-process test-applet test-do-not-disturb test-portrait-win test-portrait-dlg test-signals
+noinst_PROGRAMS = test-hung-process test-applet test-do-not-disturb test-portrait-win test-portrait-dlg test-signals test-winstack
 
 test_hung_process_SOURCES = test-hung-process.c
 test_hung_process_CFLAGS = `pkg-config --cflags gtk+-2.0`
@@ -13,14 +13,18 @@ test_do_not_disturb_CFLAGS = `pkg-config --cflags gtk+-2.0`
 test_do_not_disturb_LDFLAGS = `pkg-config --libs gtk+-2.0`
 
 test_portrait_win_SOURCES = test-portrait-win.c
-test_portrait_win_CFLAGS = `pkg-config --cflags hildon-1` -D_XOPEN_SOURCE=500
+test_portrait_win_CFLAGS = `pkg-config --cflags hildon-1`
 test_portrait_win_LDFLAGS = `pkg-config --libs hildon-1`
 
 test_portrait_dlg_SOURCES = test-portrait-dlg.c
-test_portrait_dlg_CFLAGS = `pkg-config --cflags hildon-1` -D_XOPEN_SOURCE=500
+test_portrait_dlg_CFLAGS = `pkg-config --cflags hildon-1`
 test_portrait_dlg_LDFLAGS = `pkg-config --libs hildon-1`
 
 test_signals_SOURCES = test-signals.c
 test_signals_CFLAGS = `pkg-config --cflags gtk+-2.0 dbus-1`
 test_signals_LDFLAGS = `pkg-config --libs gtk+-2.0 dbus-1`
+
+test_winstack_SOURCES = test-large-window-stack.c
+test_winstack_CFLAGS = `pkg-config --cflags hildon-1`
+test_winstack_LDFLAGS = `pkg-config --libs hildon-1`
 
